# src/main/java/com/kaiqkt/eventplatform/domain/models/Consumer.java
@@ -60,10 +60,6 @@ public class Consumer {
         return createdAt;
     }
 
-    public void setCreatedAt(LocalDateTime createdAt) {
-        this.createdAt = createdAt;
-    }
-
     public Version getVersion() {
         return version;
     }
